VLBQ - package.json add bcryptjs, JWT and hashpassword for database

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,9 +18,11 @@
   "author": "tivivu",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
