--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "test",
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "db:sync": "node src/dbInit.js"
   },
   "keywords": [
     "tivivu",
