--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "node-mailjet": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "openai": "^6.9.1",
