--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "test",
-    "build": "echo \"Error: no build step defined\" && exit 1",
+    "build": "npm install",
     "dev": "nodemon server.js",
     "start": "node server.js",
     "db:sync": "node src/dbInit.js"
