Update useSpeech hook

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,12 +23,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "node-mailjet": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "node-mailjet": "^6.0.0",
     "openai": "^6.9.1",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3"
   }
 }
