--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.0",
     "morgan": "^1.10.1",
     "node-mailjet": "^6.0.0",
     "openai": "^6.9.1",
